# lazy-swagger-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: actions.rs  app.rs  config.rs  editor.rs  main.rs  request.rs  state.rs  types.rs  utils.rs
src/swagger/: fetch.rs  mod.rs  parse.rs
src/ui/: draw.rs  events.rs  mod.rs
src/ui/draw/: components.rs  mod.rs  modals.rs  panels.rs  styling.rs  tabs.rs
src/ui/events/: execution.rs  helpers.rs  mod.rs  modals.rs  navigation.rs  parameters.rs  search.rs  yank.rs
