[package]
name = "lazy-swagger-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# terminal UI libraries
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"

# async runtime
tokio = { version = "1.48.0", features = ["full"] }

# http client
reqwest = { version = "0.12.24", features = ["json"] }

# json serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# error handling
anyhow = "1.0"

toml = "0.9.8"
dirs = "6.0.0"

url = "2.5.7"

# clipboard support
arboard = "3.4"
