[package]
name = "lazy-swagger-tui"
version = "0.1.0"
edition = "2021"
authors = ["Irfan Aulizi <irfanabliz914@gmail.com>"]
description = "A fast terminal UI for testing APIs via Swagger/OpenAPI specs"
readme = "README.md"
homepage = "https://github.com/ikorason/lazy-swagger-tui"
repository = "https://github.com/ikorason/lazy-swagger-tui"
license = "MIT"
keywords = ["tui", "swagger", "openapi", "api", "terminal", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# terminal UI libraries
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"

# async runtime
tokio = { version = "1.48.0", features = ["full"] }

# http client
reqwest = { version = "0.12.24", features = ["json"] }

# json serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# error handling
anyhow = "1.0"

toml = "0.9.8"
dirs = "6.0.0"

url = "2.5.7"

# clipboard support
arboard = "3.4"
